--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,5 +1,5 @@
 .Logo {
-    background-color: #703B09;
+    background-color: white;
     padding: 2px;
     height: 100%;
     box-sizing: border-box;
